tests/kyverno/mandate-05/resources/deployment-aiops-exception.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandate05-aiops-exception
  namespace: techx-tf3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiops-engine
  template:
    metadata:
      labels:
        app: aiops-engine
    spec:
      containers:
        - name: engine
          image: example.com/aiops-engine:IF-v22
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
