tests/kyverno/mandate-05/resources/deployment-bad-root.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandate05-bad-root-controller
  namespace: techx-tf3
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mandate05-bad-root-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mandate05-bad-root-controller
    spec:
      containers:
        - name: app
          image: 197826770971.dkr.ecr.ap-southeast-1.amazonaws.com/techx-corp@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
          resources:
            requests:
              cpu: 5m
              memory: 8Mi
            limits:
              cpu: 50m
              memory: 32Mi
