tests/kyverno/mandate-05/resources/deployment-controller-label-bypass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandate05-controller-label-bypass
  namespace: techx-tf3
  labels:
    app: aiops-engine
    app.kubernetes.io/name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mandate05-controller-label-bypass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mandate05-controller-label-bypass
    spec:
      containers:
        - name: app
          image: 197826770971.dkr.ecr.ap-southeast-1.amazonaws.com/techx-corp@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
          resources:
            requests:
              cpu: 5m
              memory: 8Mi
            limits:
              cpu: 50m
              memory: 32Mi
