tests/kyverno/mandate-05/resources/deployment-good-baseline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandate05-good-controller
  namespace: techx-tf3
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mandate05-good-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mandate05-good-controller
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: 197826770971.dkr.ecr.ap-southeast-1.amazonaws.com/techx-corp@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
          securityContext:
            runAsUser: 65532
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 5m
              memory: 8Mi
            limits:
              cpu: 50m
              memory: 32Mi
